// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourInfoDialog snapshot testing should TourInfoDialog with close button match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CloseIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <div>
      <p>
        Included
      </p>
      <div />
    </div>
    <div>
      <p>
        Dates
      </p>
      <div>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
          data-testid="CalendarMonthIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
          />
        </svg>
        <p>
          2022.02.01 - 2022.02.25
        </p>
      </div>
    </div>
    <div>
      <p>
        Details
      </p>
      <div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="AccessTimeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
          <p>
            Duration
          </p>
          <p>
            Unknown
          </p>
        </div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="FlightTakeoffIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.5 19h19v2h-19v-2zm19.57-9.36c-.21-.8-1.04-1.28-1.84-1.06L14.92 10l-6.9-6.43-1.93.51 4.14 7.17-4.97 1.33-1.97-1.54-1.45.39 2.59 4.49s7.12-1.9 16.57-4.43c.81-.23 1.28-1.05 1.07-1.85z"
            />
          </svg>
          <p>
            Departs
          </p>
          <p>
            Unknown
          </p>
        </div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="KeyboardReturnIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"
            />
          </svg>
          <p>
            Returns
          </p>
          <p>
            Unknown
          </p>
        </div>
      </div>
    </div>
    <div>
      <p>
        Currency
      </p>
      <select>
        <option>
          EUR
        </option>
        <option>
          USD
        </option>
        <option>
          UAH
        </option>
      </select>
    </div>
    <div>
      <p>
        Total
      </p>
      <div>
        <p>
          €0
        </p>
        <button>
          Add to Cart
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TourInfoDialog snapshot testing should TourInfoDialog without close button match snapshot 1`] = `
<DocumentFragment>
  <div>
    <div>
      <p>
        Included
      </p>
      <div />
    </div>
    <div>
      <p>
        Dates
      </p>
      <div>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
          data-testid="CalendarMonthIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
          />
        </svg>
        <p>
          2022.02.01 - 2022.02.25
        </p>
      </div>
    </div>
    <div>
      <p>
        Details
      </p>
      <div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="AccessTimeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
          <p>
            Duration
          </p>
          <p>
            Unknown
          </p>
        </div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="FlightTakeoffIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.5 19h19v2h-19v-2zm19.57-9.36c-.21-.8-1.04-1.28-1.84-1.06L14.92 10l-6.9-6.43-1.93.51 4.14 7.17-4.97 1.33-1.97-1.54-1.45.39 2.59 4.49s7.12-1.9 16.57-4.43c.81-.23 1.28-1.05 1.07-1.85z"
            />
          </svg>
          <p>
            Departs
          </p>
          <p>
            Unknown
          </p>
        </div>
        <div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
            data-testid="KeyboardReturnIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"
            />
          </svg>
          <p>
            Returns
          </p>
          <p>
            Unknown
          </p>
        </div>
      </div>
    </div>
    <div>
      <p>
        Currency
      </p>
      <select>
        <option>
          EUR
        </option>
        <option>
          USD
        </option>
        <option>
          UAH
        </option>
      </select>
    </div>
    <div>
      <p>
        Total
      </p>
      <div>
        <p>
          €0
        </p>
        <button>
          Add to Cart
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
